separate flops from matrix-matrix; review diagonal matrices class

--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3) *linear combination formulation* **"
+    "**3) *linear combination formulation***"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "source": [
     "Based on this introduction,\n",
     "\n",
-    "1. In your `my_functions.py` file, create a function called `deriv1d` that receives a $N \\times 1$ data vector $\\mathbf{y}$ and returns the first derivatives calculated according to the matrix-vector product presented above. The function must use one your functions for calculating the matrix-vector product. Hint: modify the algorithm for creating the matrix $\\mathbf{A}$ presented in the previous exercise to create the matrix $\\mathbf{D}$ automatically.\n",
+    "1. In your `my_functions.py` file, create a function called `deriv1d` that receives a $N \\times 1$ data vector $\\mathbf{y}$ and the interval $h$ and returns the first derivatives calculated according to the matrix-vector product presented above. The function must use one your functions for calculating the matrix-vector product. Hint: modify the algorithm for creating the matrix $\\mathbf{A}$ presented in the previous exercise to create the matrix $\\mathbf{D}$ automatically.\n",
     "2. In your `test_my_function.py` file, create one test for your function `deriv1d`. In this test, create a vector `theta` with the function [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*np.pi/1000`. Create a data vector `y` by using the [`numpy.sin`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function. Then, calculate a vector `z_true` by using the [`numpy.cos`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function. Finally, calculate a `z_calc` vector with your function `deriv1d` and compare with the `z_true` vector by using the routine [`numpy.testing.assert_almost_equal`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.testing.assert_almost_equal.html). In the routine `numpy.testing.assert_almost_equal`, use `decimal = 3`. Remember that the first and last elements of `z_calc` will be equal to zero. Be careful!"
    ]
   },
