diagonal, triangular, permutation and block matrices

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='block_matrices_1.png', width = 500>"
+    "<img src='block_matrices_1.png' width = 700>"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='block_matrices_2.png', width = 500>"
+    "<img src='block_matrices_2.png' width = 700>"
    ]
   },
   {
@@ -295,7 +295,7 @@
     "collapsed": true
    },
    "source": [
-    "<img src='block_matrices_3.png', width = 500>"
+    "<img src='block_matrices_3.png' width = 700>"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='block_matrices_4.png', width = 500>"
+    "<img src='block_matrices_4.png' width = 700>"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='block_matrices_5.png', width = 500>"
+    "<img src='block_matrices_5.png' width = 700>"
    ]
   },
   {
@@ -394,21 +394,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
