--- a/Content/triangular_matrices.ipynb
+++ b/Content/triangular_matrices.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Triangular matrices - part 1"
+    "# Triangular matrices"
    ]
   },
   {
@@ -225,8 +225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, implement the algorithms 3, 5, 8, and 10. Each algorithm must be implemented in a single function. Each algorithm must receive the triangular matrix U or L and the vector x and return the resultant vector y or z, according to the notation presented above. The cells below show how to create the matrices U and L.\n",
-    "2. In your `test_my_functions.py` file, create four tests. The first test must compare the results produced by the algorithms 3 and 5; the second test must compare the results produced by the algorithms 8 and 10; the third test must compare the results produced by the algorithms 3 and 5 and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html), and the fourth test must compare the results produced by the algorithms 8 and 10 and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html)."
+    "1. In your `my_functions.py` file, create four functions called `matvec_triu_prod3`, `matvec_triu_prod5`, `matvec_tril_prod8` and `matvec_tril_prod10` to implement the algorithms 3, 5, 8, and 10, respectively. Each algorithm must receive the triangular matrix $\\mathbf{U}$ or $\\mathbf{L}$ and the vector $\\mathbf{x}$ and return the resultant vector $\\mathbf{y}$ or $\\mathbf{z}$, according to the text presented above. The cells below show how to create the matrices $\\mathbf{U}$ and $\\mathbf{L}$.\n",
+    "2. In your `test_my_functions.py` file, create two tests. The first test must compare the results produced by the functions `matvec_triu_prod3` and `matvec_triu_prod5` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html). The second test must compare the results produced by the functions `matvec_tril_prod8` and `matvec_tril_prod10` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html)"
    ]
   },
   {
@@ -246,9 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -256,10 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "N = 5"
@@ -267,10 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = 10*np.random.rand(N,N)"
@@ -278,10 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "U = np.triu(A)"
@@ -289,13 +281,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "L = np.tril(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.01718117, 5.68432108, 6.63469429, 7.46441974, 2.89290608],\n",
+       "       [8.46778867, 1.95805811, 3.70039965, 3.55683556, 0.35377703],\n",
+       "       [9.3899707 , 3.44357192, 8.25396946, 1.2056961 , 7.06074992],\n",
+       "       [8.96343784, 3.20113979, 7.31977538, 2.9235426 , 8.81175334],\n",
+       "       [5.12841362, 8.94764649, 8.42383142, 4.505968  , 3.56083785]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.01718117, 5.68432108, 6.63469429, 7.46441974, 2.89290608],\n",
+       "       [0.        , 1.95805811, 3.70039965, 3.55683556, 0.35377703],\n",
+       "       [0.        , 0.        , 8.25396946, 1.2056961 , 7.06074992],\n",
+       "       [0.        , 0.        , 0.        , 2.9235426 , 8.81175334],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 3.56083785]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
    ]
   },
   {
@@ -304,69 +342,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.39994494  5.1990145   6.64802477  8.26461278  9.97597219]\n",
-      " [ 9.32020145  6.16766859  7.21614016  9.56120463  3.36986973]\n",
-      " [ 4.80990239  7.81498467  5.32755188  2.66383862  4.80562381]\n",
-      " [ 1.06540763  0.13238005  3.60187207  9.63759958  6.58738176]\n",
-      " [ 8.64717915  7.79233115  6.66156655  5.49369209  1.39116862]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[7.01718117, 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [8.46778867, 1.95805811, 0.        , 0.        , 0.        ],\n",
+       "       [9.3899707 , 3.44357192, 8.25396946, 0.        , 0.        ],\n",
+       "       [8.96343784, 3.20113979, 7.31977538, 2.9235426 , 0.        ],\n",
+       "       [5.12841362, 8.94764649, 8.42383142, 4.505968  , 3.56083785]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.39994494  5.1990145   6.64802477  8.26461278  9.97597219]\n",
-      " [ 0.          6.16766859  7.21614016  9.56120463  3.36986973]\n",
-      " [ 0.          0.          5.32755188  2.66383862  4.80562381]\n",
-      " [ 0.          0.          0.          9.63759958  6.58738176]\n",
-      " [ 0.          0.          0.          0.          1.39116862]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print U"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.39994494  0.          0.          0.          0.        ]\n",
-      " [ 9.32020145  6.16766859  0.          0.          0.        ]\n",
-      " [ 4.80990239  7.81498467  5.32755188  0.          0.        ]\n",
-      " [ 1.06540763  0.13238005  3.60187207  9.63759958  0.        ]\n",
-      " [ 8.64717915  7.79233115  6.66156655  5.49369209  1.39116862]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print L"
+    "L"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -374,21 +371,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
