generalized diagonal matrices

--- a/Content/diagonal_matrices_part2.ipynb
+++ b/Content/diagonal_matrices_part2.ipynb
@@ -4,26 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diagonal matrices"
+    "# Diagonal matrices - part 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a $N \\times N$ matrix $\\mathbf{D}$ given by:"
+    "Consider now a generalized $N \\times N$ diagonal matrix $\\mathbf{D}_{k}$ with a dislocated diagonal. Let's consider that the diagonal has an offset $k$. If $k > 0$, the diagonal is dislocated towards the upper triangle of $\\mathbf{D}_{k}$. If $k < 0$, then it is dislocated towards the lower triangle of $\\mathbf{D}_{k}$. The particular case in which $k = 0$ is equivalent to the diagonal matrix presented in `diagonal_matrices_part1.ipynb`. Consider a the following examples with $N = 5$:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{D} \n",
-    "= \\left[ \\begin{array}{ccc}\n",
-    "d_{11} &  &  \\\\\n",
-    " & \\ddots &  \\\\\n",
-    " &  & d_{NN}\n",
-    "\\end{array} \\right] \\: .\n",
+    "$$\\mathbf{D}_{2} = \\begin{bmatrix}\n",
+    "0 & 0 & d_{13} & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & d_{24} & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & d_{35} \\\\\n",
+    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0\n",
+    "\\end{bmatrix}\n",
     "$$"
    ]
   },
@@ -31,7 +32,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This matrix is called **diagonal**. Only the diagonal elements are different from zero. In this case, most of the matrix elements are zero and, consequently, do not need to be stored. Such matrices can be represented by a $N \\times 1$ vector defined as follows:"
+    "$$\\mathbf{D}_{-1} = \\begin{bmatrix}\n",
+    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "d_{21} & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & d_{32} & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & d_{43} & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & d_{54} & 0\n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly to the case $k = 0$, the product of $\\mathbf{D}_{k}$ and a vector $\\mathbf{x}$ for $k \\ne 0$ can be defined in terms of the Hadamard product (see the notebook `hadamard.ipynb`), as follows:"
    ]
   },
   {
@@ -133,129 +148,6 @@
     "5. In your `my_functions.py` file, create a function called `matmat_fulldiag_prod` for computing the product `BD` according to the second algorithm shown above. The function must receive the full matrix `B` and the diagonal `d`.\n",
     "6. In your `test_my_functions.py` file, create two tests for the function `matmat_diagfull_prod`. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix `D` and the vector `d` containing its diagonal elements (see the example below). This test must compare the result produced by one of your previous functions developed in the notebook `matrix-matrix.ipynb` and the result produced by the function `matmat_diagfull_prod`.\n",
     "7. (Extra) Determine the total number of flops associated with each algorithm presented above. Are these number of flops equal to those required for computing the conventional product between two full matrices?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Creating the diagonal matrix $\\mathbf{D}$ and the vector $\\mathbf{d}$ containing its diagonal elements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a vector `d` by using, for example, the function [`numpy.random.rand`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.random.rand.html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = np.random.rand(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.82407404, 0.95397501, 0.12399036, 0.32575491, 0.06702674])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Now, create the diagonal matrix `D` by using the routine [`numpy.diag`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.diag.html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D = np.diag(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.82407404, 0.        , 0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.95397501, 0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.12399036, 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.32575491, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.06702674]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "You can also extract the diagonal of a given matrix by using the routine [`numpy.diag`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.diag.html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.82407404, 0.95397501, 0.12399036, 0.32575491, 0.06702674])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.diag(D)"
    ]
   },
   {
