review diagonal and triangular matrices

--- a/Content/diagonal_matrices_part2.ipynb
+++ b/Content/diagonal_matrices_part2.ipynb
@@ -46,47 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly to the case $k = 0$, the product of $\\mathbf{D}_{k}$ and a vector $\\mathbf{x}$ for $k \\ne 0$ can be defined in terms of the Hadamard product (see the notebook `hadamard.ipynb`), as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\mathbf{d} = diag \\left( \\mathbf{D} \\right) = \n",
-    "\\left[ \\begin{array}{c}\n",
-    "d_{11} \\\\\n",
-    "\\vdots \\\\\n",
-    "d_{NN}\n",
-    "\\end{array} \\right] \\: .\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let $\\mathbf{x}$ be a $N \\times 1$ vector given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\mathbf{x} = \n",
-    "\\left[ \\begin{array}{c}\n",
-    "x_{1} \\\\\n",
-    "\\vdots \\\\\n",
-    "x_{N}\n",
-    "\\end{array} \\right] \\: .\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this case, it can be easily shown that"
+    "Notice that $k$ is an integer varying from $-N+1$ to $N-1$. Similarly to the case $k = 0$, the product of $\\mathbf{D}_{k}$ and a vector $\\mathbf{x}$ for $k \\ne 0$ can be defined in terms of the Hadamard product (see the notebook `hadamard.ipynb`), as follows:"
    ]
   },
   {
@@ -94,40 +54,39 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{D} \\mathbf{x} = \\mathbf{d} \\circ \\mathbf{x} \\: ,\n",
+    "\\mathbf{D}_{k} \\mathbf{x} = \\begin{bmatrix}\n",
+    "\\mathbf{d} \\circ \\mathbf{x}[ k : \\,] \\\\\n",
+    "\\mathbf{0}_{k \\times 1}\n",
+    "\\end{bmatrix} \\: , \\quad k > 0 \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
-    "\n",
-    "which represents the Hadamard (or entrywise) product of $\\mathbf{d}$ and $\\mathbf{x}$."
+    "\\mathbf{D}_{k} \\mathbf{x} = \\mathbf{d} \\circ \\mathbf{x} \\: , \\quad k = 0 \\: ,\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, consider a full $N \\times N$ matrix $\\mathbf{B}$. It can be show that the resultant matrix $\\mathbf{C} = \\mathbf{D} \\mathbf{B}$ can be calculated as follows:"
+    "or"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for i = 1:N\n",
-    "        C[i, :] = d[i]*B[i,:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Similarly, it can be shown that the product $\\mathbf{E} = \\mathbf{B} \\mathbf{D}$ can be calculated as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    for j = 1:N\n",
-    "        E[:,j] = d[j]*B[:,j]"
+    "$$\n",
+    "\\mathbf{D}_{k} \\mathbf{x} = \\begin{bmatrix}\n",
+    "\\mathbf{0}_{(-k) \\times 1} \\\\\n",
+    "\\mathbf{d} \\circ \\mathbf{x}[ \\, : N+k ]\n",
+    "\\end{bmatrix} \\: , \\quad k < 0 \\: .\n",
+    "$$"
    ]
   },
   {
@@ -141,21 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function called `matvec_diag_prod` for computing the product `Dx` according to the algorithm presented above. The function must receive the diagonal `d` and the vector `x`.\n",
-    "2. In your `test_my_functions.py` file, create two tests for the function `matvec_diag_prod`. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix `D` by using the vector `d` containing its diagonal elements (see the example below). This test must compare the result produced by one of your previous functions developed in the notebook `matrix-vector.ipynb` and the result produced by the function `matvec_diag_prod`.\n",
-    "3. In your `my_functions.py` file, create a function called `matmat_diagfull_prod` for computing the product `DB` according to the first algorithm shown above. The function must receive the diagonal `d` and the full matrix `B`.\n",
-    "4. In your `test_my_functions.py` file, create two tests for the function `matmat_diagfull_prod`. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix `D` by using the vector `d` containing its diagonal elements (see the example below). This test must compare the result produced by one of your previous functions developed in the notebook `matrix-matrix.ipynb` and the result produced by the function `matmat_diagfull_prod`.\n",
-    "5. In your `my_functions.py` file, create a function called `matmat_fulldiag_prod` for computing the product `BD` according to the second algorithm shown above. The function must receive the full matrix `B` and the diagonal `d`.\n",
-    "6. In your `test_my_functions.py` file, create two tests for the function `matmat_diagfull_prod`. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix `D` and the vector `d` containing its diagonal elements (see the example below). This test must compare the result produced by one of your previous functions developed in the notebook `matrix-matrix.ipynb` and the result produced by the function `matmat_diagfull_prod`.\n",
-    "7. (Extra) Determine the total number of flops associated with each algorithm presented above. Are these number of flops equal to those required for computing the conventional product between two full matrices?"
+    "1. In your `my_functions.py` file, create a function called `matvec_diagk_prod` for computing the product $\\mathbf{D}_{k} \\mathbf{x}$ by using the Hadamard product. . Your function must receive the diagonal $\\mathbf{d}$, the constant $k$ and the vector $\\mathbf{x}$. Additionally, it must have an assert for checking if $k$ has a valid value. Notice that $\\mathbf{d}$ has $N$ elements for the particular case in which $k = 0$. Otherwise, $\\mathbf{d}$ has $N - \\mid k \\mid $ elements.\n",
+    "2. In your `test_my_functions.py` file, create two tests for the function `matvec_diagk_prod`. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix $\\mathbf{D}_{k}$ by using the vector $\\mathbf{d}$. This test must compare the result produced by one of your previous functions developed in the notebook `matrix-vector.ipynb` and the result produced by the function `matvec_diagk_prod`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
