--- a/Content/review_math_1.ipynb
+++ b/Content/review_math_1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Parameter vector'></a>\n",
+    "<a id='Parameter_vector'></a>\n",
     "### Parameter vector"
    ]
   },
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Scalar functions'></a>\n",
+    "<a id='Scalar_functions'></a>\n",
     "### Scalar functions"
    ]
   },
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly to the case of [Scalar functions](#Scalar functions), we omit the dependence of $\\mathbf{f}$ on spatial coordinates $x$, $y$, $z$, and/or time $t$. Notice that, in all the examples given above, the elements of $\\mathbf{f}(\\mathbf{p})$ are defined by the same function evaluated at a different spatial coordinate $x_{i}$, $y_{i}$, $z_{i}$, and/or time $t_{i}$, $i = 1, \\dots, N$. Along the course, we will work with vector functions like these. In general, we use the subscript notation to define the elements of $\\mathbf{f}(\\mathbf{p})$. For example, let's consider the first vector function presented above (equation [7](#eq7)). By using the subscript notation, we represent this function as follows:"
+    "Similarly to the case of [Scalar functions](#Scalar_functions), we omit the dependence of $\\mathbf{f}$ on spatial coordinates $x$, $y$, $z$, and/or time $t$. Notice that, in all the examples given above, the elements of $\\mathbf{f}(\\mathbf{p})$ are defined by the same function evaluated at a different spatial coordinate $x_{i}$, $y_{i}$, $z_{i}$, and/or time $t_{i}$, $i = 1, \\dots, N$. Along the course, we will work with vector functions like these. In general, we use the subscript notation to define the elements of $\\mathbf{f}(\\mathbf{p})$. For example, let's consider the first vector function presented above (equation [7](#eq7)). By using the subscript notation, we represent this function as follows:"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Frequently, we need to compute the first order partial derivative of a [Scalar function](#Scalar functions) $f(\\mathbf{p})$ with respect to a given [parameter](#Parameter vector) $p_{j}$, $j = 1, \\dots, M$. We represent this derivative as follows:"
+    "Frequently, we need to compute the first order partial derivative of a [Scalar function](#Scalar_functions) $f(\\mathbf{p})$ with respect to a given [parameter](#Parameter_vector) $p_{j}$, $j = 1, \\dots, M$. We represent this derivative as follows:"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Derivative 3'></a>\n",
+    "<a id='Derivative_3'></a>\n",
     "#### Derivative 3"
    ]
   },
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P.S.: Use the [Derivative 3](#Derivative 3)."
+    "P.S.: Use the [Derivative 3](#Derivative_3)."
    ]
   },
   {
@@ -565,21 +565,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
