--- a/Content/triangular_matrices_part1.ipynb
+++ b/Content/triangular_matrices_part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Triangular matrices"
+    "# Triangular matrices - part 1"
    ]
   },
   {
@@ -359,13 +359,6 @@
    "source": [
     "L"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
