symmetric and band matrices

--- a/Content/diagonal_matrices_part2.ipynb
+++ b/Content/diagonal_matrices_part2.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function called `matvec_diagk_prod` for computing the product $\\mathbf{D}_{k} \\mathbf{x}$ by using the Hadamard product. . Your function must receive the diagonal $\\mathbf{d}$, the constant $k$ and the vector $\\mathbf{x}$. Additionally, it must have an assert for checking if $k$ has a valid value. Notice that $\\mathbf{d}$ has $N$ elements for the particular case in which $k = 0$. Otherwise, $\\mathbf{d}$ has $N - \\mid k \\mid $ elements.\n",
+    "1. In your `my_functions.py` file, create a function called `matvec_diagk_prod` for computing the product $\\mathbf{D}_{k} \\mathbf{x}$ by using the Hadamard product. Your function must receive the diagonal $\\mathbf{d}$, the constant $k$ and the vector $\\mathbf{x}$. Additionally, it must have an assert for checking if $k$ has a valid value. Notice that $\\mathbf{d}$ has $N$ elements for the particular case in which $k = 0$. Otherwise, $\\mathbf{d}$ has $N - \\mid k \\mid $ elements.\n",
     "2. In your `test_my_functions.py` file, create two tests for the function `matvec_diagk_prod`. One test must receive an specific input and compare the result obtained by your function with an expected result. The other test must create the diagonal matrix $\\mathbf{D}_{k}$ by using the vector $\\mathbf{d}$. This test must compare the result produced by one of your previous functions developed in the notebook `matrix-vector.ipynb` and the result produced by the function `matvec_diagk_prod`."
    ]
   }
