diagonal, triangular, symmetric and band matrices

--- a/Content/diagonal_matrices_part2.ipynb
+++ b/Content/diagonal_matrices_part2.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "$$\n",
     "\\mathbf{D}_{k} \\mathbf{x} = \\begin{bmatrix}\n",
-    "\\mathbf{d} \\circ \\mathbf{x}[ k : \\,] \\\\\n",
+    "\\mathbf{d} \\circ \\mathbf{x}[ k + 1: \\,] \\\\\n",
     "\\mathbf{0}_{k \\times 1}\n",
     "\\end{bmatrix} \\: , \\quad k > 0 \\: ,\n",
     "$$"
